--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
                     <div class="userInfo">
                         <div class="childFirstName">[firstName]</div>
                         <div class="balance">$0.00</div>
+                        <div class="dropArrow"><!-- <div class="arrow"></div> --></div>
                     </div>
                 </div>
             </div>
@@ -237,7 +238,7 @@
 
                                 <div class="taskItem clearfix" data-taskid="9">
                                    <div class="addButton">+</div>
-                                   <img class="icon" src="img/tasks/iconGenericTask@2x.png"/>
+                                   <img class="icon" src="img/tasks/iconReadBook@2x.png"/>
                                    <div class="taskDetails">
                                       <div class="title">Practice reading</div>
                                       <div class="numKids"><span>599</span> kids are doing this</div>
@@ -273,7 +274,7 @@
 
                                 <div class="taskItem clearfix" data-taskid="13">
                                    <div class="addButton">+</div>
-                                   <img class="icon" src="img/tasks/iconGenericTask@2x.png"/>
+                                   <img class="icon" src="img/tasks/iconWalkDog@2x.png"/>
                                    <div class="taskDetails">
                                       <div class="title">Walk the dog</div>
                                       <div class="numKids"><span>532</span> kids are doing this</div>
@@ -291,7 +292,7 @@
 
                                 <div class="taskItem clearfix" data-taskid="15">
                                    <div class="addButton">+</div>
-                                   <img class="icon" src="img/tasks/iconGenericTask@2x.png"/>
+                                   <img class="icon" src="img/tasks/iconTakeOutTrash@2x.png"/>
                                    <div class="taskDetails">
                                       <div class="title">Take out the trash</div>
                                       <div class="numKids"><span>456</span> kids are doing this</div>
@@ -300,7 +301,7 @@
 
                                 <div class="taskItem clearfix" data-taskid="16">
                                    <div class="addButton">+</div>
-                                   <img class="icon" src="img/tasks/iconGenericTask@2x.png"/>
+                                   <img class="icon" src="img/tasks/iconBeNice@2x.png"/>
                                    <div class="taskDetails">
                                       <div class="title">Have a great attitude</div>
                                       <div class="numKids"><span>436</span> kids are doing this</div>
@@ -327,7 +328,7 @@
 
                                 <div class="taskItem clearfix" data-taskid="19">
                                    <div class="addButton">+</div>
-                                   <img class="icon" src="img/tasks/iconGenericTask@2x.png"/>
+                                   <img class="icon" src="img/tasks/iconFeedPet@2x.png"/>
                                    <div class="taskDetails">
                                       <div class="title">Feed the dog</div>
                                       <div class="numKids"><span>362</span> kids are doing this</div>
@@ -363,7 +364,7 @@
 
                                 <div class="taskItem clearfix" data-taskid="23">
                                    <div class="addButton">+</div>
-                                   <img class="icon" src="img/tasks/iconGenericTask@2x.png"/>
+                                   <img class="icon" src="img/tasks/iconFeedPet@2x.png"/>
                                    <div class="taskDetails">
                                       <div class="title">Feed the cat</div>
                                       <div class="numKids"><span>310</span> kids are doing this</div>
@@ -408,7 +409,7 @@
 
                                 <div class="taskItem clearfix" data-taskid="28">
                                    <div class="addButton">+</div>
-                                   <img class="icon" src="img/tasks/iconGenericTask@2x.png"/>
+                                   <img class="icon" src="img/tasks/iconDog@2x.png"/>
                                    <div class="taskDetails">
                                       <div class="title">Brush the dog</div>
                                       <div class="numKids"><span>223</span> kids are doing this</div>
@@ -471,7 +472,7 @@
 
                                 <div class="taskItem clearfix" data-taskid="35">
                                    <div class="addButton">+</div>
-                                   <img class="icon" src="img/tasks/iconGenericTask@2x.png"/>
+                                   <img class="icon" src="img/tasks/iconCat@2x.png"/>
                                    <div class="taskDetails">
                                       <div class="title">Brush the cat</div>
                                       <div class="numKids"><span>168</span> kids are doing this</div>
@@ -507,7 +508,7 @@
 
                                 <div class="taskItem clearfix" data-taskid="39">
                                    <div class="addButton">+</div>
-                                   <img class="icon" src="img/tasks/iconGenericTask@2x.png"/>
+                                   <img class="icon" src="img/tasks/iconFoldLaundry@2x.png"/>
                                    <div class="taskDetails">
                                       <div class="title">Fold the laundry</div>
                                       <div class="numKids"><span>100</span> kids are doing this</div>
@@ -516,7 +517,7 @@
 
                                 <div class="taskItem clearfix" data-taskid="40">
                                    <div class="addButton">+</div>
-                                   <img class="icon" src="img/tasks/iconGenericTask@2x.png"/>
+                                   <img class="icon" src="img/tasks/iconDog@2x.png"/>
                                    <div class="taskDetails">
                                       <div class="title">Clean the dog run</div>
                                       <div class="numKids"><span>100</span> kids are doing this</div>
@@ -570,7 +571,7 @@
 
                                 <div class="taskItem clearfix" data-taskid="46">
                                    <div class="addButton">+</div>
-                                   <img class="icon" src="img/tasks/iconGenericTask@2x.png"/>
+                                   <img class="icon" src="img/tasks/iconCat@2x.png"/>
                                    <div class="taskDetails">
                                       <div class="title">Change the cat litter</div>
                                       <div class="numKids"><span>75</span> kids are doing this</div>
