getting ready to validate and submit the addCustomGoalForm

--- a/index.html
+++ b/index.html
@@ -1445,7 +1445,8 @@
                 <div class="customGoalContent" data-role="content">
                     <form method="get" id="customGoalForm">
                         <label for="newGoalName">Goal Name</label>
-                        <input type="text" id="newGoalName" />
+                        <input type="text" id="newGoalName"  name="newGoalName" />
+                        <input type="submit" id="createNewGoalButton" value="Add it" data-theme="a" />
                     </form>
                 </div>
             </div><!-- END custom goal popup form -->
