boy/girl avatar icons implemented

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 
                 <!-- user module / account switcher -->
                 <div class="userModule clearfix">
-                    <img src="img/accountImage@2x.png" class="avatar" alt="[firstName]">
+                    <img src="img/accountBoy@2x.png" class="avatar" alt="[firstName]">
                     <div class="userInfo">
                         <div class="childFirstName">[firstName]</div>
                         <div class="balance">$0.00</div>
