--- a/index.html
+++ b/index.html
@@ -1450,7 +1450,7 @@
                         <div class="clearfix">
                             <div class="goalDetails">
                                 <div data-role="fieldcontain" class="money">
-                                    <label for="newGoalPrice">Price</label>
+                                    <label for="newGoalPrice">Amount</label>
                                     <div class="clearfix">
                                         $ <input type="number" step="any" min="0" id="newGoalPrice" />
                                     </div>
