--- a/index.html
+++ b/index.html
@@ -1440,7 +1440,7 @@
 
             <!-- create a custom goal form popup form -->
             <div data-role="popup" id="customGoalPopup">
-                <a href="#" data-rel="back" data-role="button" data-theme="b" data-icon="delete" data-iconpos="notext" class="ui-btn-right">Close</a>
+                <a href="#" data-rel="back"  class="closePopupButton ui-btn-right">X</a>
                 <div class="title ui-bar ui-bar-a">Create your own goal</div>
                 <div class="customGoalContent" data-role="content">
                     <form method="get" id="customGoalForm">
@@ -1482,7 +1482,7 @@
 
             <!-- start configureTasks -->
             <div data-role="popup" id="configureTasks">
-                <a href="#" data-rel="back" data-role="button" data-theme="b" data-icon="delete" data-iconpos="notext" class="ui-btn-right">Close</a>
+                <a href="#" data-rel="back"  class="closePopupButton ui-btn-right">X</a>
                 <div class="taskTitle ui-bar ui-bar-a"></div>
                 <div class="taskContent" data-role="content">
                     <form method="get" id="configureTaskForm">
@@ -1576,7 +1576,7 @@
 
             <!-- START productDetails popup -->
             <div data-role="popup" id="productDetailsPopup">
-                <a href="#" data-rel="back" data-role="button" data-theme="b" data-icon="delete" data-iconpos="notext" class="ui-btn-right">Close</a>
+                <a href="#" data-rel="back"  class="closePopupButton ui-btn-right">X</a>
                 <div class="taskContent clearfix" data-role="content">
                     <div class="images">
                         <div class="mainImage verticalWrapper">
