Forced hiding product catalog (was showing both)

--- a/index.html
+++ b/index.html
@@ -721,7 +721,7 @@
 
                             <div class="popularProducts"></div>
 
-                            <div class="products">
+                            <div class="products offScreen">
 
                                 <div class="productItem clearfix" data-productid="0" data-ageMin="3"  data-ageMax="12"  data-gender="b">
                                    <div class="productImage verticalWrapper">
