Forced hiding task catalog (was showing both)

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
                             <div class="popularTasks"></div>
 
-                            <div class="tasks">
+                            <div class="tasks offScreen">
 
                                 <div class="taskItem clearfix" data-taskid="0">
                                    <div class="addButton">+</div>
@@ -1387,7 +1387,7 @@
                                 </div>
                                 
                                 
-                                <!--  when replacing tasks, KEEP THIS!!! -->
+                                <!--  when replacing products, KEEP THIS!!! -->
                                 <div class='bottomSpacer'></div>
 
                             </div><!-- END products -->
