Added save & delete buttons to task configure

--- a/index.html
+++ b/index.html
@@ -1557,8 +1557,19 @@
                             </div>
                         </div>
                             
-
-                        <input type="submit" id="configureTasksAddIt" value="Add it" data-theme="a" />
+                        <div class="configureTasksNewTask">
+                            <input type="submit" id="configureTasksAddIt" value="Add it" data-theme="a" />
+                        </div>
+                        <div class="configureTasksEditTask">
+                            <div class="ui-grid-a">
+                                <div class="ui-block-a">
+                                    <input type="submit" id="configureTasksDelete" value="Delete" data-theme="c" />
+                                </div>
+                                <div class="ui-block-b">
+                                    <input type="submit" id="configureTasksSave" value="Save" data-theme="a" />
+                                </div>
+                            </div>
+                        </div>
                     </form>
                 </div>
             </div>
