friendly message for portrait mode until we get it completely working

--- a/index.html
+++ b/index.html
@@ -1641,6 +1641,12 @@
             </div> <!-- end footer -->
 
         </div><!-- END startTasks page -->
+        
+        <!-- === Portrait coverup page === -->
+        <div data-role="page" id="portraitCover" class="clearfix">
+            <h1>This web app is best viewed in landscape</h1>
+            <h3>Please rotate your device</h3>
+        </div>
 
         <!-- script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script -->
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
