--- a/index.html
+++ b/index.html
@@ -1569,7 +1569,7 @@
                         <div class="configureTasksEditTask">
                             <div class="ui-grid-a">
                                 <div class="ui-block-a">
-                                    <input type="button" id="configureTasksDelete" value="Delete" data-theme="c" />
+                                    <input type="button" id="configureTasksDelete" value="Remove Task" data-theme="c" />
                                 </div>
                                 <div class="ui-block-b">
                                     <input type="submit" id="configureTasksSave" value="Save" data-theme="a" />
