Delete products from child done!

--- a/index.html
+++ b/index.html
@@ -1602,8 +1602,13 @@
                             </span>
                         </div>
                         <div class="desc"></div>
-                        <input type="button" class="addProductButton" data-theme="b" value="ADD TO WISHLIST" data-inline="true" />
-                    </div>
+                        <div class="addProductButtonBox">
+                            <input type="button" class="addProductButton" data-theme="b" value="ADD TO WISHLIST" data-inline="true" />
+                        </div>
+                        <div class="deleteProductButtonBox">
+                            <input type="button" class="deleteProductButton" data-theme="c" value="REMOVE GOAL" data-inline="true" />
+                        </div>
+                     </div>
                 </div>
                 <div class="bottom">
                     <div data-role="content">
