--- a/index.html
+++ b/index.html
@@ -1512,7 +1512,7 @@
                                 <input type="button" id="deleteCustomGoalButton" value="Remove Goal" data-theme="c" />
                             </div>
                             <div class="ui-block-b">
-                                <input type="submit" id="editCustomGoalButton" value="Save" data-theme="a" />
+                                <input type="submit" id="saveCustomGoalButton" value="Save" data-theme="a" />
                             </div>
                         </div>
                     </form>
