updating colors and tour

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="ui-grid-a">
                 
                 <!-- Sign Up column -->
-                <div class="ui-block-a signIn ui-bar-a">
+                <div class="ui-block-a signIn">
                     <div data-role="content">
                         <h2>New Users</h2>
                         <p>We just need a little info to help you customize a plan for your kids!</p>
@@ -75,15 +75,15 @@
                                  <div class="continueMessage">See how easy it is</div>
                               </div>
                               <div class="slide slide2">
-                                 <h1>It's Easy and Visual</h1>
+                                 <h1>Just 2 Simple Steps!</h1>
                                  <div class="continueMessage">See what people are saying</div>
                               </div>
                               <div class="slide slide3">
                                  <h1>Testimonials</h1>
-                                 <div class="continueMessage">See the power of community</div>
+                                 <div class="continueMessage">See what kids on Tykoon have accomplished</div>
                               </div>
                               <div class="slide slide4">
-                                 <h1>The power of community</h1>
+                                 <h1>The Power of the Community</h1>
                               </div>
                            </div>
                         </div>
