--- a/index.html
+++ b/index.html
@@ -42,14 +42,15 @@
                 <!-- Sign Up column -->
                 <div class="ui-block-a signIn">
                     <div data-role="content">
+                       <div class="logo">Tykoon</div>
                         <h2>New Users</h2>
                         <p>We just need a little info to help you customize a plan for your kids!</p>
                         <form method="post" id="getStartedForm">
                             <label for="getStartedFormChildFirstName" data-theme="a">Child First Name</label>
-                            <input type="text" name="getStartedFormChildFirstName" id="getStartedFormChildFirstName" data-theme="a"/>
+                            <input type="text" name="getStartedFormChildFirstName" placeholder="Child First Name" id="getStartedFormChildFirstName" data-theme="a"/>
                             <div class="error" id="noNameError">Please enter a name</div>
                             <label for="getStartedFormChildBirthday">Birthday</label>
-                            <input type="date" id="getStartedFormChildBirthday" data-theme="a" />
+                            <input type="date" id="getStartedFormChildBirthday" placeholder="Birthday" data-theme="a" />
                             <div class="error" id="noBirthdayError">Please enter a birthday</div>
                             <label for="getStartedFormChildGender">Gender</label>
                             <fieldset data-role="controlgroup" data-type="horizontal" id="getStartedFormChildGender" data-theme="c">
@@ -131,7 +132,7 @@
                 <div class="ui-block-a">
                     <div data-role="content" class="header ui-bar-a">
                         <div class="sectionTitle">Tasks &amp; Pay</div>
-                        <a data-role="button" class="addButton ui-disabled" id="addTasksButton" data-theme="b" data-inline="true" data-icon="plus">Add Task</a>
+                        <a data-role="button" class="addButton ui-disabled" id="addTasksButton" data-theme="a" data-inline="true" data-icon="plus">Add Task</a>
                         <div class="subTitle">How <span class="childFirstName">[firstName]</span> will earn money</div>
                     </div>
                     <div data-role="content" class="setAllowance">
@@ -150,7 +151,7 @@
                 <div class="ui-block-b">
                     <div data-role="content" class="header ui-bar-a">
                         <div class="sectionTitle">Goals</div>
-                        <a data-role="button" class="addButton ui-disabled" id="addGoalsButton" data-theme="b" data-inline="true"  data-icon="plus">Add Goal</a>
+                        <a data-role="button" class="addButton ui-disabled" id="addGoalsButton" data-theme="a" data-inline="true"  data-icon="plus">Add Goal</a>
                         <div class="subTitle">What <span class="childFirstName">[firstName]</span> will save for</div>
                     </div>
                     <div class="selectedProducts">
