--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                                 <input type="radio" name="getStartedFormChildGender" id="genderGirl" value="f"  data-theme="c" />
                                 <label for="genderGirl">Girl</label>
                             </fieldset>
-                            <input type="submit"  data-theme="b" data-inline="true" id="getStartedFormSubmit" value="Get Started" />
+                            <input type="submit"  data-theme="b" id="getStartedFormSubmit" value="GET STARTED  &nbsp;&nbsp;  ▶" />
                         </form>
                     </div>
                  </div>
@@ -1903,15 +1903,15 @@
             <div data-role="footer" class="ui-bar">
                 <div class="startTasksFooter footerBar">
                     After you have added some tasks and reviewed pay, move on to set some goals
-                    <input type="button" id="doneWithTasksButton" data-theme="b" value="Done setting Tasks" data-icon="arrow-r" data-iconpos="right" data-inline="true" />
+                    <input type="button" id="doneWithTasksButton" data-theme="b" value="DONE SETTING TASKS &nbsp;&nbsp;  ▶" data-inline="true" />
                 </div>
                 <div  class="startGoalsFooter footerBar">
                     When you&rsquo;re done adding Goals, review the whole picture with <span class="childFirstName">[childName]</span>.
-                    <input type="button" id="doneWithGoalsButton" data-theme="b" value="Let's Review!" data-icon="arrow-r" data-iconpos="right" data-inline="true" />
+                    <input type="button" id="doneWithGoalsButton" data-theme="b" value="LET&rsquo;S REVIEW! &nbsp;&nbsp;  ▶" data-inline="true" />
                 </div>
                 <div  class="finishSetupFooter footerBar">
                     Once you and <span class="childFirstName">[childName]</span> have agreed your selections, your account is ready to use.
-                    <input type="button" id="signAgreementButton" data-theme="b" value="Finish and Activate" data-icon="arrow-r" data-iconpos="right" data-inline="true" />
+                    <input type="button" id="signAgreementButton" data-theme="b" value="FINISH AND ACTIVATE &nbsp;&nbsp;  ▶" data-inline="true" />
                 </div>
                 <div  class="doneAddingTasks footerBar">
                     When you're done adding Tasks
