some changes to login form to get closer to mockups

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                 <div class="ui-block-a signIn">
                     <div data-role="content">
                        <div class="logo">Tykoon</div>
-                        <h2>New Users</h2>
-                        <p>We just need a little info to help you customize a plan for your kids!</p>
+                       <div class="tagline">Building a Money Smart World, One Kid at a Time</div>
+                        <p class="intro">Build a customized plan<br /> for <em>your</em> kids</p>
                         <form method="post" id="getStartedForm">
                             <input type="text" name="getStartedFormChildFirstName" placeholder="Child First Name" id="getStartedFormChildFirstName" data-theme="a"/>
                             <div class="error" id="noNameError">Please enter a name</div>
