basic content and layout for the 1st tour page

--- a/index.html
+++ b/index.html
@@ -73,6 +73,26 @@
                            <div class = 'slider '>
                               <div class="slide slide1">
                                  <h1>Look what kids are doing to achieve their goals</h1>
+                                 <div class="goalContent ui-grid-b">
+                                    <div class="ui-block-a">
+                                       <div class="dot dot1"></div>
+                                       <div class="text">Johnny12 is saving to <strong>earn a 32Gb iPod Touch</strong></div>
+                                       <div class="task"><img src="img/tasks/iconCleanRoom@2x.png" />by <span>cleaning his room</span></div>
+                                       <div class="doingThis">389 kids are doing this</div>
+                                    </div>
+                                    <div class="ui-block-b">
+                                       <div class="dot dot2"></div>
+                                       <div class="text">AmandaChief is saving to <strong>donate $10 to the World Wildlife Fund</strong></div>
+                                       <div class="task"><img src="img/tasks/iconWashCar@2x.png" />by <span>washing the car</span></div>
+                                       <div class="doingThis">122 kids are doing this</div>
+                                    </div>
+                                    <div class="ui-block-c">
+                                       <div class="dot dot3"></div>
+                                       <div class="text">BigEbig is saving <strong>$50 into a College Savings Fund</strong></div>
+                                       <div class="task"><img src="img/tasks/iconMowLawn@2x.png" />by <span>mowing the lawn</span></div>
+                                       <div class="doingThis">157 kids are doing this</div>
+                                    </div>
+                                 </div>
                                  <div class="continueMessage">See how easy it is</div>
                               </div>
                               <div class="slide slide2">
