content for slide 2 almost done

--- a/index.html
+++ b/index.html
@@ -97,6 +97,20 @@
                               </div>
                               <div class="slide slide2">
                                  <h1>Just 2 Simple Steps!</h1>
+                                 <div class="simpleSteps ui-grid-a">
+                                    <div class="ui-block-a">
+                                       <div class="text clearfix">
+                                          <div class="dot">1</div>
+                                          <div class="dotText">Set up weekly tasks &amp; pay for your kids</div>
+                                       </div>
+                                    </div>
+                                    <div class="ui-block-b">
+                                       <div class="text clearfix">
+                                          <div class="dot">2</div>
+                                          <div class="dotText">Your kids will work hard and track their goals</div>
+                                       </div>
+                                    </div>
+                                 </div>
                                  <div class="continueMessage">See what people are saying</div>
                               </div>
                               <div class="slide slide3">
