--- a/index.html
+++ b/index.html
@@ -100,14 +100,12 @@
                                  <div class="simpleSteps ui-grid-a">
                                     <div class="ui-block-a">
                                        <div class="text clearfix">
-                                          <div class="dot">1</div>
-                                          <div class="dotText">Set up weekly tasks &amp; pay for your kids</div>
+                                          <div class="dot">1</div><div class="dotText">Set up weekly tasks &amp; pay for your kids</div>
                                        </div>
                                     </div>
                                     <div class="ui-block-b">
                                        <div class="text clearfix">
-                                          <div class="dot">2</div>
-                                          <div class="dotText">Your kids will work hard and track their goals</div>
+                                          <div class="dot">2</div><div class="dotText">Your kids will work hard and track their goals</div>
                                        </div>
                                     </div>
                                  </div>
@@ -115,6 +113,27 @@
                               </div>
                               <div class="slide slide3">
                                  <h1>Testimonials</h1>
+                                 <div class="testimonial t1">
+                                    <div class="bubble">
+                                       <span>This is amazing. <strong>My kids are actually asking me to do more chores!</strong> Go Tykoon... You&rsquo;ve changed my life.</span>
+                                       <div class="pointer"></div>
+                                       <div class="name">Jazbud123</div>
+                                    </div>
+                                 </div>
+                                 <div class="testimonial t2">
+                                    <div class="bubble">
+                                       <span>When my son &ldquo;has to have&rdquo; something while we are out shopping, <strong>we take a photo and add it to his wishlist</strong>. It solves the problem of saying &ldquo;no&rdquo;.</span>
+                                       <div class="pointer"></div>
+                                       <div class="name">Ross7213</div>
+                                    </div>
+                                 </div>
+                                 <div class="testimonial t3">
+                                    <div class="bubble">
+                                       <span>As a teacher and a parent, I can only say I wish we had Tykoon as kids growing up! There is so much useful life learning going on.</span>
+                                       <div class="pointer"></div>
+                                       <div class="name">SandraV</div>
+                                    </div>
+                                 </div>
                                  <div class="continueMessage">See what kids on Tykoon have accomplished</div>
                               </div>
                               <div class="slide slide4">
